fix(junior): add align to image inside mission-card at start mission

--- a/junior/app/styles/components/mission-card/card.scss
+++ b/junior/app/styles/components/mission-card/card.scss
@@ -11,7 +11,9 @@
     font-style: normal;
     background-color: var(--pix-neutral-0);
     border-radius: 16px;
-    box-shadow: 2px 4px 6px 0 rgb(70 77 98 / 20%), 0 0 2px 0 rgb(70 77 98 / 32%);
+    box-shadow:
+      2px 4px 6px 0 rgb(70 77 98 / 20%),
+      0 0 2px 0 rgb(70 77 98 / 32%);
 
     .area-code-1 {
       color: var(--pix-information-dark);
@@ -118,6 +120,7 @@
       top: 85px;
       right: 0;
       left: 0;
+      text-align: center;
 
       .icon {
         width: 121px;
